Css corrections
I did a few things that made sure that when the window got smaller the photo would not overlap the text and I added a height to the lower photos so they would stay the same height.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,24 +13,30 @@ $heading-font: 'Nunito', 'Avenir', sans-serif;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
+  height: 35%
 }
 
 .top-photo {
-  margin: 10px;
+  width: 575px;
+  height: 530px;
+  overflow: hidden;
+}
+
+.details-flex{
+  width: 575px;
 }
 
 .top-container{
   display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  margin: 15px 0px;
+  justify-content: space-around;
+  flex-wrap: wrap;
   width: 100%;
 }
 
 .home-photos img {
   width: 400px;
   max-width: 800px;
-  max-height: 500px;
+  height: 500px;
   flex: 1 1 400px;
 }
 
